Fix home page mobile layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+html,
+body {
+  overflow-x: scroll;
+}
